# brackets

./: MANIFEST.in  README-PATCH.md  README.md  brx.toml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: authoring.md  bxc-authoring.md  cache.md  caching.md  cli.md  components.md  data.md  desktop.md  examples-counter.md  faq.md  index.md  plugins.md  quickstart.md  routing.md  security.md  simple-mode.md  templates.md
examples/basic-counter/app/: app.py
examples/basic-counter/app/templates/layouts/: @base.bx
examples/basic-counter/app/templates/pages/: index.bx
examples/desktop/app/: app.py
examples/desktop/app/templates/layouts/: @base.bx
examples/desktop/app/templates/pages/: index.bx
examples/minimal/app/: app.py
examples/minimal/app/templates/layouts/: @base.bx
examples/minimal/app/templates/pages/: index.bx
examples/todos/app/: app.py
examples/todos/app/components/: Counter.bxc
examples/todos/app/templates/layouts/: @base.bx
examples/todos/app/templates/pages/: index.bx
src/brackets/: __init__.py  cli.py  public.py
src/brackets/internal/: app.py  cache.py  data.py  desktop.py  dsl.py  events.py  http.py  limit.py  plugins.py  render.py  router.py  security.py  sse.py
src/brackets/static/: brackets.js  morph.js  sse.js
src/brackets/templates/: README.txt
